--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,19 @@
 .dark-2{
     color: #474747;
 }
+.section-title{
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+}
+.section-description{
+    font-size: 18px;
+    color: #757575;
+}
+.secondary-bg{
+    background-color: #fff8f3;
+}
+
 .btn-primary{
     background-color: orangered;
     font-weight: bold;
@@ -81,4 +94,25 @@ nav ul li a{
 
 .banner-profile-pic{
     width: 580px;
+}
+/* main styles */
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+/* about styles */
+.about{
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+    margin-top: 130px;
+}
+.about-items{
+    display: flex;
+    justify-content: space-around;
+}
+
+.item-description{
+    font-weight: 600;
 }
