--- a/styles/style.css
+++ b/styles/style.css
@@ -19,6 +19,10 @@
     font-size: 18px;
     color: #757575;
 }
+.text-center{
+    text-align: center;
+}
+
 .secondary-bg{
     background-color: #fff8f3;
 }
@@ -100,13 +104,17 @@ main{
     max-width: 1140px;
     margin: 0 auto;
 }
+main section{
+    margin-top: 130px;
+    margin-bottom: 130px;
+}
 
 /* about styles */
 .about{
     border-radius: 10px;
     padding: 130px 150px;
     text-align: center;
-    margin-top: 130px;
+    /* margin-top: 130px; */
 }
 .about-items{
     display: flex;
@@ -115,4 +123,56 @@ main{
 
 .item-description{
     font-weight: 600;
+}
+
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+/* resume section styles */
+.resume-container{
+    display: flex;
+    gap: 24px;
+}
+
+.experience-sub-title{
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+
+.experience-description, .experience-sub-title{
+    color: #757575;
+}
+
+.resume-download-cv{
+    margin-top: 50px;
+}
+
+footer{
+    padding: 130px 230px ;
+    display: flex;
+    gap: 100px;
+
+}
+
+.footer-column{
+    width: 50%;
+}
+footer input[type="text"], footer input[type="email"], footer textarea{
+    height: 64px;
+    border-radius: 5px;
+    background-color: white;
+    display: block;
+    width: 100%;
+    padding: 10px 20px;
+    margin-bottom: 24px;
+    border: none;
 }
